# AutoDJIPilot

./: .gitignore  .gitmodules  AutoRun.sh  CMakeLists.txt  ReadMe  auto_run.sh
APP/BuildCheck/: BuildCheck.lua
APP/BuildCheck/PathCode/: Path.pcode
APP/common/: geo.lua  tools.lua
APP/lib/: tools.lua
AutoPilot/: CMakeLists.txt  TODO-List
AutoPilot/inc/: Commander.h  ConsoleServer.h  DJI_MAVlinkBrige.h  DjiCameraZoomType.h  FlightCore.h  FlightLog.h  LuaInterface.h  LuaParser.h  MavlinkRouter.h  PayloadBase.h  PayloadPlugin.h
AutoPilot/inc/dev/: InterfaceSerial.h
AutoPilot/inc/linux/: LinuxEnvironment.hpp  LinuxHelpers.hpp
AutoPilot/inc/utilize/: Debug.h  EventManage.h  Message.h  geo.h  tools.h
AutoPilot/inc/vehicle/: Matrice200.h
AutoPilot/src/: Commander.cpp  ConsoleServer.cpp  DJI_MAVlinkBrige.cpp  FlightCore.cpp  FlightLog.cpp  LuaInterface.cpp  LuaParser.cpp  Main.cpp  MavlinkRouter.cpp  PayloadBase.cpp
AutoPilot/src/dev/: InterfaceSerial.cpp
AutoPilot/src/linux/: LinuxEnvironment.cpp  LinuxHelpers.cpp
AutoPilot/src/utilize/: EventManage.cpp  Message.cpp  geo.cpp
AutoPilot/src/vehicle/: Matrice200.cpp
config/: config.lua
lib/: lua_config.h
lib/lua-5.3.5/: CMakeLists.txt
lib/lua-5.3.5/src/: luaconf.h
test/offline/: test0.lua  test1.lua  test2.lua  test3.lua  test4.lua  test5.lua
test/online/: test0.lua  test1.lua  test2.lua  test3.lua  test4.lua  test5.lua  test6.lua  test7.lua
